<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToDo</string>
    <string name="tab_all">All</string>
    <string name="tab_personal">Personal</string>
    <string name="tab_work">Work</string>
    <string name="tab_study">Study</string>
    <string name="note">Note</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="title">Title</string>
    <string name="write_a_note" tools:ignore="TypographyEllipsis">Write a note...</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="add_notes">Add notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="edited">Last edit</string>

    <string-array name="labels">
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
    </string-array>
</resources>