<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.gita.node_app_from_khayrullo.ui.screens.AddScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/nib_back"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/note"
                android:textColor="@color/colorTitle"
                app:layout_constraintBottom_toBottomOf="@+id/nib_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintStart_toEndOf="@+id/nib_back"
                app:layout_constraintTop_toTopOf="@+id/nib_back" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_save"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="99dp"
                android:layout_height="65dp"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/nib_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nib_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ncv_title"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:hint="@string/title"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ncv_label"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ncv_title"
        app:layout_constraintStart_toStartOf="@+id/ncv_title"
        app:layout_constraintTop_toBottomOf="@+id/ncv_title"
        app:neumorph_shapeType="pressed">

        <Spinner
            android:id="@+id/sp_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/labels"
            android:padding="20dp" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ncv_note"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_delete"
        app:layout_constraintEnd_toEndOf="@+id/ncv_label"
        app:layout_constraintStart_toStartOf="@+id/ncv_label"
        app:layout_constraintTop_toBottomOf="@+id/ncv_label"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/write_a_note"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/button_delete"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ncv_note"
        app:layout_constraintStart_toStartOf="@+id/ncv_note"
        app:neumorph_backgroundColor="@android:color/holo_red_light" />

</androidx.constraintlayout.widget.ConstraintLayout>