<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.gita.node_app_from_khayrullo.ui.screens.DetailNoteScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:elevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/nib_back"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/note"
                android:textColor="@color/colorTitle"
                app:layout_constraintBottom_toBottomOf="@+id/nib_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintStart_toEndOf="@+id/nib_back"
                app:layout_constraintTop_toTopOf="@+id/nib_back" />

            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/btn_save"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/save"
                android:src="@drawable/ic_baseline_edit_note_24"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/nib_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nib_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cl_menu"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="This is title of our note" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="Jul 01, 1997" />

            <TextView
                android:id="@+id/tv_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorTitle"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                tools:text="Hi my name is rizki and i love kotlin!" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:elevation="8dp">

        <TextView
            android:id="@+id/tv_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_menu"
            app:layout_constraintEnd_toStartOf="@+id/ib_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_menu"
            tools:text="Last edited 21 Nov" />

        <ImageButton
            android:id="@+id/ib_menu"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/menu"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseAppTint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>